[package]
name = "quackmap"
version = "0.1.0"
edition = "2024"
description = "A fixed-limit on-disk hashmap with variable-length keys and values."

[dev-dependencies]
criterion = "0.5"
memmap2 = "0.9.5"
rand = "0.9.0"
tempfile = "3.19.0"
clap = { version = "4.5.32", features = ["derive"] }
anyhow = "1.0.97"
rand_xoshiro = "0.7.0"

[[bench]]
name = "benches"
harness = false
